# heartlenv-shell

./: ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.in  config.h.in~  configure.ac  heartlenv-panel-desktop-handler.desktop.in  heartlenv-panel-preferences.desktop.in  sr.sh
browser-plugin/: Makefile.am  README  browser-plugin.c
common/: panel-private.h  panel-utils.c  panel-utils.h  panel-xfconf.c
data/: Makefile.am  heartlenv-shell-extension-prefs.desktop.in.in  heartlenv-shell-overrides.convert  heartlenv-shell.desktop.in.in  org.heartlenv.ShellSearchProvider.xml  org.heartlenv.shell.evolution.calendar.gschema.xml.in  org.heartlenv.shell.gschema.xml.in
docs/manual/: Makefile.am  actions.page  add-new-items.page  getting-started.page  index.page  pager.page  preferences.page  separator.page  showdesktop.page  theming.page  windowmenu.page
docs/reference/shell/: Makefile.am
docs/reference/st/: Makefile.am
docs/references/: Makefile.am  libheartlenvpanel-docs.xml  libheartlenvpanel-sections.txt
docs/references/html/: XfceArrowButton.html  XfceHVBox.html  XfcePanelImage.html  XfcePanelPlugin.html  (+19 more)
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
js/: Makefile.am
js/extensionPrefs/: main.js
js/gdm/: loginDialog.js
js/misc/: config.js.in  extensionUtils.js  heartlenvSession.js  screenSaver.js
js/ui/: altTab.js  appDisplay.js  autorunManager.js  calendar.js  checkBox.js  contactDisplay.js  dateMenu.js  endSessionDialog.js  extensionSystem.js  keyboard.js  keyringPrompt.js  magnifierDBus.js  main.js  messageTray.js  networkAgent.js  polkitAuthenticationAgent.js  remoteSearch.js  scripting.js  shellDBus.js  statusIconDispatcher.js  telepathyClient.js  userMenu.js  viewSelector.js  wanda.js  windowManager.js  workspace.js  workspacesView.js
libheartlenvpanel/: Makefile.am  abicheck.sh  libheartlenvpanel-1.0.pc.in  libheartlenvpanel-alias.h  libheartlenvpanel-aliasdef.c  libheartlenvpanel-config.c  libheartlenvpanel-config.h  libheartlenvpanel-config.h.in  libheartlenvpanel-enum-types.c  libheartlenvpanel-enum-types.h  libheartlenvpanel-enums.h  libheartlenvpanel-marshal.c  libheartlenvpanel-marshal.h  libheartlenvpanel.h  libheartlenvpanel.symbols  make-libheartlenvpanel-alias.pl  xfce-arrow-button.c  xfce-arrow-button.h  xfce-hvbox.c  xfce-hvbox.h  xfce-panel-convenience.c  xfce-panel-convenience.h  xfce-panel-image.c  xfce-panel-image.h  xfce-panel-macros-46.h  xfce-panel-macros.h  xfce-panel-plugin-provider.c  xfce-panel-plugin-provider.h  xfce-panel-plugin.c  xfce-panel-plugin.h
man/: Makefile.am  heartlenv-shell.1
migrate/: Makefile.am  default.xml  main.c  migrate-46.c  migrate-46.h  migrate-default.c
panel/: Makefile.am  main.c  panel-application.c  panel-base-window.c  panel-dbus-client-infos.h  panel-dbus-client.c  panel-dbus-service-infos.h  panel-dbus-service.c  panel-dialogs.c  panel-item-dialog.c  panel-itembar.c  panel-marshal.c  panel-module-factory.c  panel-module-factory.h  panel-module.c  panel-module.h  panel-plugin-external-46.c  panel-plugin-external-46.h  panel-plugin-external-wrapper-infos.h  panel-plugin-external-wrapper.c  panel-plugin-external-wrapper.h  panel-plugin-external.c  panel-plugin-external.h  panel-preferences-dialog-ui.h  panel-preferences-dialog.c  panel-preferences-dialog.glade  panel-tic-tac-toe.c  panel-window.c
plugins/actions/: Makefile.am  actions-dialog.glade  actions-dialog_ui.h  actions.c
plugins/applicationsmenu/: Makefile.am  applicationsmenu-dialog.glade  applicationsmenu-dialog_ui.h  applicationsmenu.c  applicationsmenu.desktop.in  heartlenv-popup-applicationsmenu.sh
plugins/clock/: Makefile.am  clock-dialog.glade  clock-dialog_ui.h  clock.c  clock.h
plugins/directorymenu/: Makefile.am  directorymenu-dialog.glade  directorymenu-dialog_ui.h  directorymenu.c  heartlenv-popup-directorymenu.sh
plugins/launcher/: Makefile.am  launcher-dialog.c  launcher-dialog.glade  launcher-dialog_ui.h  launcher.c  launcher.h
plugins/pager/: Makefile.am  pager-buttons.c  pager-dialog.glade  pager-dialog_ui.h  pager.c  pager.desktop.in
plugins/separator/: Makefile.am  separator-dialog.glade  separator-dialog_ui.h  separator.c
plugins/showdesktop/: Makefile.am  showdesktop.c  showdesktop.h
plugins/systray/: Makefile.am  systray-box.c  systray-dialog.glade  systray-dialog_ui.h  systray-manager.c  systray-marshal.c  systray-socket.c  systray.c  systray.h
plugins/tasklist/: Makefile.am  tasklist-dialog.glade  tasklist-dialog_ui.h  tasklist-widget.c  tasklist.c
plugins/windowmenu/: Makefile.am  heartlenv-popup-windowmenu.sh  windowmenu-dialog.glade  windowmenu-dialog_ui.h  windowmenu.c
po/: POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  (+40 more)
src/: Makefile-calendar-server.am  Makefile-hotplug-sniffer.am  Makefile.am  heartlenv-shell-extension-tool.in  heartlenv-shell-jhbuild.in  heartlenv-shell-plugin.c  main.c  shell-a11y.c  shell-app-system.c  shell-app-usage.c  shell-global.c  shell-idle-monitor.c  shell-idle-monitor.h  shell-keyring-prompt.c  shell-keyring-prompt.h  shell-mount-operation.c  shell-perf-helper.c  shell-polkit-authentication-agent.c  shell-recorder-src.c  shell-secure-text-buffer.c  shell-secure-text-buffer.h  shell-util.c  shell-xfixes-cursor.c  test-gapplication.js
src/calendar-server/: README  calendar-sources.c  heartlenv-shell-calendar-server.c  org.heartlenv.Shell.CalendarServer.service.in
src/gvc/: gvc-mixer-control.c
src/hotplug-sniffer/: hotplug-sniffer.c  org.heartlenv.Shell.HotplugSniffer.service.in
src/st/: st-scroll-view.c  st-texture-cache.c  st-theme.c
tests/testcommon/: test.css
tests/unit/: url.js
wrapper/: Makefile.am  main.c  wrapper-module.h  wrapper-plug.h
(+23 files in other folders)
